terraform/1-vpc.tf
resource "aws_vpc" "main" {
    cidr_block = var.vpc_cidr
    enable_dns_hostnames = true

    tags = {
        Name = "${var.project_name}"
        Author = var.author
    }
    
}
