terraform/3-public-routes.tf
resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.main.id

    tags = {
        Name = "igw_${var.project_name}"
        Author = var.author
    }
}

resource "aws_route_table" "public_route_table" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }

    tags = {
        Name = "public_rt_${var.project_name}"
        Author = var.author
    }
}

resource "aws_route_table_association" "public_route_table_association" {
    count = var.public_subnet_count
    subnet_id = element(aws_subnet.public_subnets.*.id, count.index)
    route_table_id = aws_route_table.public_route_table.id
}
